--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     compile 'com.oracle:ojdbc6:11.2.0.3'
     compile 'log4j:log4j:1.2.17'
     compile 'javax.mail:mail:1.4.7'
+    compile 'org.apache.commons:commons-configuration2:2.1'
+    compile 'commons-beanutils:commons-beanutils:1.9.3'
 }
 
 run {
