Add Spock results to Gralde test output

--- a/build.gradle
+++ b/build.gradle
@@ -50,3 +50,8 @@ task jarJaxbJava(dependsOn:compileJaxb, type: Jar){
     from('build/generated/jaxb/java/configType')
     destinationDir = file('src/main/resources')
 }
+
+tasks.withType(Test) {
+    testLogging.exceptionFormat = 'full'
+}
+
